tests/NormalTests/paczka1/fuzzy1/99910315.err
Error in line 3: S574 S574 82,8
Error in line 5: DCY5oY S428 30,4
Error in line 8: DCY5oY S574 54,0
Error in line 11: Hamnl S428 20,8
Error in line 20: Hamnl S140 18,2
Error in line 40: S574 S428 329,62
